--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 
   <body>
     <%= render partial: "/partials/auth" %>
+    <%= render partial: "/partials/nav" %>
     <%= yield %>
   </body>
 </html>
