IMplements visitor user stories

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,7 @@
   <ul class="top_organizations">
     <% @top_orgs.each do |organization| %>
       <li>
-        <%= organization.title %>
+        <%= organization.name %>
         <%= organization.description %>
       </li>
     <% end %>
