WIP implements auth user stories

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,8 @@
   </head>
 
   <body>
-    <%= render partial: "/partials/auth" %>
     <%= render partial: "/partials/nav" %>
+    <%= render partial: "/partials/auth" unless current_page?(login_path || new_user_path) %>
     <%= yield %>
   </body>
 </html>
