--- a/app/views/partials/_auth.html.erb
+++ b/app/views/partials/_auth.html.erb
@@ -1,2 +1,7 @@
-<%= link_to  "Sign Up", new_user_path %>
-<%= link_to  "Login", login_path %>
+<% if current_user %>
+  <%= link_to  "My Profile", user_path(current_user)%>
+  <%= link_to  "Log Out", logout_path %>
+<% else %>
+  <%= link_to  "Sign Up", new_user_path%>
+  <%= link_to  "Login", login_path %>
+<% end %>
