--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,11 @@
   <body>
     <%= render partial: "/partials/nav" %>
     <%= render partial: "/partials/auth" unless current_page?(login_path || new_user_path) %>
+    <% if flash[:error] %>
+      <div class="error">
+        <%= flash[:error] %>
+      <div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
