--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -2,7 +2,7 @@
   <ul>
     <% @organizations.each do |organization| %>
       <li>
-        <%= organization.name %>
+        <%= link_to  "#{organization.name}", organization_path(organization) %>
         <%= organization.description %>
         <%= link_to  "Donate", new_organization_donation_path(organization) %>
       </li>
