--- a/app/views/partials/_auth.html.erb
+++ b/app/views/partials/_auth.html.erb
@@ -1,6 +1,6 @@
 <% if current_user %>
   <%= link_to  "My Profile", user_path(current_user)%>
-  <%= link_to  "Log Out", logout_path %>
+  <%= link_to  "Log Out", logout_path, data: { confirm:"Are you sure you would like to log out?" } %>
 <% else %>
   <%= link_to  "Sign Up", new_user_path%>
   <%= link_to  "Login", login_path %>
