implements admin control over organizations

--- a/app/views/admin/organizations/_form.html.erb
+++ b/app/views/admin/organizations/_form.html.erb
@@ -1,9 +1,9 @@
-<%= form_for @organization do |f| %>
+<%= form_for [:admin,@organization] do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
 
   <%= f.label :description %>
-  <%= f.text_are :description %>
+  <%= f.text_area :description %>
 
   <%= f.submit %>
 <% end %>
