--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -43,7 +43,8 @@
             Score: <%= review.score %>
           </h3>
           <% if current_admin? %>
-            <%= link_to  "Delete This Review", admin_review_path(review), method:'delete'%>
+            <%= link_to  "Delete this Review", admin_review_path(review), method:'delete'%>
+          <% end %>
         </li>
       <% end %>
     </ul>
