--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,18 +5,26 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= stylesheet_link_tag 'application', media: 'all' %>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <%= javascript_include_tag 'application' %>
+
   </head>
 
   <body>
-    <%= render partial: "/partials/nav" %>
-    <%= render partial: "/partials/auth" unless current_page?(login_path || new_user_path) %>
+    <nav>
+      <ul>
+          <%= render partial: "/partials/nav" %>
+        
+          <%= render partial: "/partials/auth" unless current_page?(login_path || new_user_path) %>
+      </ul>
+    </nav>
     <% if flash[:error] %>
       <div class="error">
         <%= flash[:error] %>
       <div>
     <% end %>
     <%= yield %>
+    
   </body>
 </html>
