--- a/app/views/admin/organizations/edit.html.erb
+++ b/app/views/admin/organizations/edit.html.erb
@@ -1,7 +1,7 @@
-<banner>
+<header>
   Edit <%=@organization.name%>
-</banner>
-
+</header>
+<%= render partial: "/partials/flash" %>
 <content>
   <%= render partial: "form" %>
 </content
