--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,9 @@
+<header>
+  <h3>
+    Create a New Account
+  </h3>
+</header>
+<%= render partial: "/partials/flash" %>
 <content>
   <%= render partial: "form" %>
 </content>
