--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -1,3 +1,9 @@
+<header>
+  <h3>
+    Organizations
+  </h3>
+</header>
+<%= render partial: "/partials/flash" %>
 <content>
   <ul>
     <% @organizations.each do |organization| %>
