--- a/app/views/partials/_auth.html.erb
+++ b/app/views/partials/_auth.html.erb
@@ -1,16 +1,28 @@
 
 <% if current_user %>
   <li>
-    <%= link_to  "My Profile", user_path(current_user)%>
+    <% if current_page?(user_path(current_user)) %>
+      <%= link_to  "My Profile", user_path(current_user), class:"active"%>
+    <% else %>
+      <%= link_to  "My Profile", user_path(current_user)%>
+    <% end %>
   </li>
   <li>
     <%= link_to  "Log Out", logout_path, data: { confirm:"Are you sure you would like to log out?" } %>
   </li>
 <% else %>
   <li>
+  <% if current_page?(new_user_path) %>
+    <%= link_to  "Sign Up", new_user_path, class:"active"%>
+  <% else %>
     <%= link_to  "Sign Up", new_user_path%>
+  <% end %>
   </li>
   <li>
+    <% if current_page?login_path() %>
+      <%= link_to  "Login", login_path, class:"active"  %>
+  <% else %>
     <%= link_to  "Login", login_path %>
+  <% end %>
   </li>
 <% end %>
