--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,6 +1,14 @@
 <li>
-  <%= link_to  "FrontPage", root_path %>
+  <% if current_page?(root_path) %>
+    <%= link_to  "FrontPage", root_path, class:'active' %>
+  <% else %>
+    <%= link_to  "FrontPage", root_path %>
+  <% end %>
   </li>
   <li>
+  <% if current_page?(organizations_path) %>
+    <%= link_to  "Organizations", organizations_path, class:'active' %>
+  <% else %>
   <%= link_to  "Organizations", organizations_path %>
+  <% end %>
 </li>
