--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -22,6 +22,9 @@
   </header>
   <%= render partial: "/partials/flash" %>
   <content>
+    <h3>
+      Top Organizations:
+    </h3>
     <ul class="top_organizations">
       <% @top_orgs.each do |organization| %>
         <li>
