--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -22,7 +22,7 @@
   </header>
   <%= render partial: "/partials/flash" %>
   <content>
-    <h3>
+    <h3 class='title'>
       Top Organizations:
     </h3>
     <ul class="top_organizations">
