removes uneccesary colon

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -23,7 +23,7 @@
   <%= render partial: "/partials/flash" %>
   <content>
     <h3 class='title'>
-      Top Organizations:
+      Top Organizations
     </h3>
     <ul class="top_organizations">
       <% @top_orgs.each do |organization| %>
