--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,7 +10,7 @@
             <%= link_to  "#{@top_organization.name}", organization_path(@top_organization) %>
             </br>
             <h3>
-              <%= link_to "Help", new_organization_donation_path(@top_organization) %>
+              <%= link_to "Donate", new_organization_donation_path(@top_organization) %>
             </h3>
           </h2>
         </div>
