--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,8 +1,8 @@
 <li>
   <% if current_page?(root_path) %>
-    <%= link_to  "FrontPage", root_path, class:'active' %>
+    <%= link_to  "CharityTracker", root_path, class:'active' %>
   <% else %>
-    <%= link_to  "FrontPage", root_path %>
+    <%= link_to  "CharityTracker", root_path %>
   <% end %>
   </li>
   <li>
