--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -2,9 +2,9 @@
   <h1>
     <%= @organization.name %>
   </h1>
-  <h3>
+  <h4 style="text-indent: 25px;">
     <%= @organization.description %>
-  </h3>
+  </h4>
   <h4>
     Average User Score: <%= @average_score %>
   </h4>
