--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,9 +14,11 @@
             </h3>
           </h2>
         </div>
-        <h4>
-          <%= @top_organization.description %>
-        </h4>
+        <div class="description">
+          <h4>
+            <%= @top_organization.description %>
+          </h4>
+        </div>
       </div>
     </br>
   </header>
