--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,4 @@
+
 <% if @top_organization %>
   <header>
     </br>
@@ -42,3 +43,13 @@
     </ul>
   </content>
 <% end %>
+<footer>
+  <h3>
+    CHARITY TRACKER</br>
+  </h3>
+  <h4>
+    We make it easy to do good.</br>
+    A centralized home for helping, Charity Tracker is your first stop when you feel moved to act.  </br>
+    Easy links to find the organizations you want to support, along with reviews and an easy way to donate - sending your help right where it’s needed.</br>
+  </h4>
+</footer>
