cleans up css, changes fonts

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,7 @@
         Featured Organization
       </h2>
       <div class="featured">
-        <div>
+        <div class="hero">
           <h2>
             <%= link_to  "#{@top_organization.name}", organization_path(@top_organization) %>
             </br>
