--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,10 +1,29 @@
 *{
   font-family: 'Roboto', sans-serif;
 }
+* a {
+  color: #435070;
+}
 body {
   margin: 0px;
 }
-
+header {
+  padding: 20px;
+  margin-top: 30px;
+  background: #72ACAA;
+  border-bottom: 3px solid gray
+}
+.featured {
+  display: flex;
+  padding: 0px;
+  width: 100%;
+  text-align: center;
+  align-items: baseline;
+  justify-content: space-around;
+  padding-left: 10%;
+  padding-right: 10%;
+  font-weight: bold;
+}
 nav {
   display: flex;
   position: fixed; 
@@ -12,7 +31,6 @@ nav {
   width: 100%;
   overflow: hidden;
 }
-
 nav ul {
   display: flex;
   list-style-type: none;
@@ -21,214 +39,63 @@ nav ul {
   overflow: hidden;
   background-color: #333;
 }
-
 nav li {
   float: left;
 }
-
+nav li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  -webkit-transition:.5s;
+}
+nav li a:hover {
+  color: white;
+  background-color: gray;
+  text-decoration: none;
+  -webkit-transition:.5s;
+}
+.active {
+  background-color: gray;
+  text-decoration: none;
+}
+.description{
+  margin-left: 10%;
+}
+content ul{
+  list-style-type: none;
+  margin: 20px;
+  padding: 0;
+}
 content .title {
   display: flex;
   justify-content: center;
 }
-
-nav li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  -webkit-transition:.5s;
-}
-nav li a:hover {
-  color: white;
-  background-color: gray;
-  text-decoration: none;
-  -webkit-transition:.5s;
-}
-
-.active {
-  background-color: gray;
-  text-decoration: none;
-}
-
-header {
-  padding: 20px;
-  margin-top: 30px;
-  background: lightblue;
-  border-bottom: 3px solid gray
-}
-
-.featured {
-  display: flex;
-  padding: 0px;
-  text-align: center;
-  justify-content: space-around;
-  font-weight: bold;
-}
-
-.description{
-  margin-left: 10%;
-}
-
-
-content ul{
-  list-style-type: none;
-  margin: 20px;
-  padding: 0;
-}
-
 content li {
+  border: 2px gray;
+  margin: 30px;
   padding: 10px;
   width: 29%;
+  border-radius: 7px;
+  text-align: center;
 }
-
 content li a {
   -webkit-transition:.5s;
-
+  color: #1641ad;
 }
-
+header a:hover {
+  color: gray;
+  text-decoration: none;
+  text-shadow: 2px 2px gray;
+  -webkit-transition:.5s;
+}
 content li a:hover {
   color: gray;
   text-decoration: none;
   text-shadow: 2px 2px lightgray;
   -webkit-transition:.5s;
 }
-
-form{
-  display: flex;
-  flex-direction: column;
-  margin-left: 15px;
-  width: 40%;
-}
-
-.reviews li {
-  padding: 10px;
-}
-
-.reviews h5 {
-  text-indent: 50px;
-}
-
-.reviews h6 {
-  text-indent: 25px;
-}
-
-input[type=text], select {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 2px solid #ccc;
-  border-radius: 7px;
-  box-sizing: border-box;
-}
-
-input[type=submit] {
-  width: 100%;
-  background-color: #4CAF50;
-  color: white;
-  font-size: 120%;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 7px;
-  cursor: pointer;
-  -webkit-transition:.5s;
-
-}
-
-input[type=submit]:hover {
-  color: currentColor;
-  box-shadow:  2px 2px lightgray;
-  -webkit-transition:.5s;
-}
-
-.error{
-
-}
-body {
-  margin: 0px;
-}
-
-nav {
-  display: flex;
-}
-
-nav ul {
-  display: flex;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-}
-
-nav li {
-  float: left;
-}
-
-nav li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  -webkit-transition:.5s;
-}
-nav li a:hover {
-  color: white;
-  background-color: gray;
-  text-decoration: none;
-  -webkit-transition:.5s;
-}
-
-.active {
-  background-color: gray;
-  text-decoration: none;
-}
-
-header {
-  padding: 20px;
-  background: lightblue;
-  border-bottom: 3px solid gray
-}
-
-.featured {
-  display: flex;
-  width: 100%;
-  text-align: center;
-  align-items: baseline;
-  padding-left: 10%;
-  padding-right: 10%;
-  font-weight: bold;
-}
-
-.featured form{
-  width: 100%;
-}
-
-content ul{
-  list-style-type: none;
-  margin: 20px;
-  padding: 0;
-}
-
-content li {
-  padding: 10px;
-}
-
-content li a {
-  -webkit-transition:.5s;
-
-}
-
-content li a:hover {
-  color: gray;
-  text-decoration: none;
-  text-shadow: 2px 2px lightgray;
-  -webkit-transition:.5s;
-}
-
 form{
   display: flex;
   flex-direction: column;
@@ -236,19 +103,32 @@ form{
   width: 40%;
   padding: 1%;
 }
-
 .reviews li {
   padding: 10px;
 }
-
 .reviews h5 {
   text-indent: 50px;
 }
-
 .reviews h6 {
   text-indent: 25px;
 }
+.error {
 
+}
+.active {
+  background-color: gray;
+  text-decoration: none;
+}
+.featured form{
+  width: 100%;
+}
+content ul {
+  list-style-type: none;
+  margin: 20px;
+  padding: 0;
+  display: flex;
+  flex-flow: row wrap;
+}
 input[type=text], select {
   width: 100%;
   padding: 12px 20px;
@@ -258,11 +138,10 @@ input[type=text], select {
   border-radius: 7px;
   box-sizing: border-box;
 }
-
 input[type=submit] {
   width: 100%;
-  background-color: #4CAF50;
-  color: white;
+  background-color: #C5D377;
+  color: gray;
   font-size: 120%;
   padding: 14px 20px;
   margin: 8px 0;
@@ -272,53 +151,31 @@ input[type=submit] {
   -webkit-transition:.5s;
 
 }
-
-
 input[type=submit]:hover {
-  box-shadow:  2px 2px gray;
+  box-shadow:  3px 3px gray;
+  color: darkgray;
   -webkit-transition:.5s;
 }
-
-content ul {
-  display: flex;
-  flex-flow: row wrap;
-}
-
-content li {
-  border: 2px gray;
-  margin: 30px;
-  border-radius: 7px;
-  text-align: center;
-}
-
-
-.my_profile ul {
-  display: flex;
-  flex-direction: column;
-}
-
 .my_profile {
   display: flex;
   justify-content: flex-start;
 }
-
 .my_profile ul{
+  display: flex;
+  flex-direction: column;
   width: 100%;
   float: left;
 }
-
 .my_profile li {
   width: 100%;
   text-align: left;
 }
-
 .organizations li {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-content: center; 
 }
-
 .organizations li input[type=submit] {
   width: 70%;
   font-size:100%;
@@ -327,32 +184,26 @@ content li {
   justify-content: center;
   margin-left: 75%;
 }
-
 .pagination {
   font-size: 12px;
 }
-
 .pagination > * {
   margin-right: 0.1em;
   padding: 0.3em 0.4em;
 }
-
 .pagination a:hover {
   background: lightblue none repeat scroll 0 0;
   text-shadow: 1px 1px 1px gray;
   text-decoration: none;
 }
-
 .pagination a:active {
   text-shadow: none;
 }
-
 .pagination .current {
   background: lightblue none repeat scroll 0 0;
   color: white;
   text-shadow: 1px 1px 1px gray;
 }
-
 .pagination .disabled {
   color: #C0C0C0;
 }
@@ -362,7 +213,6 @@ content li {
   text-decoration: none;
   transition: background-color .3s;
 }
-
 footer {
   border: 0;
   padding: 2%;
@@ -370,5 +220,15 @@ footer {
   background: gray;
   text-align: center;
 }
-header footer {
+body a {
+  color: #435070;
+}
+header a {
+  font-weight: bolder;
+  font-family: 'Oswald';
+  font-size: 42pt;
+  text-decoration: none;
+  -webkit-transition:.5s;
+  color: whitesmoke;
+ 
 }
